<resources>
  <string name="app_name">Andreas Moritz</string>

  <!-- TODO: Remove or change this placeholder text -->
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="am_current_hint" translatable="false">CURRENT_HINT</string>

  <string name="am_text">Text</string>
  <string name="am_alarm">Alarm</string>
  <string name="am_hint">Hint</string>

  <string name="am_alarm_set">Set Alarm</string>
  <string name="am_alarm_warning">This list of alarms will be set</string>
  <string name="am_alarm_1700">17:00 Prepare magnesium</string>
  <string name="am_alarm_1800">18:00 | Drink first portion</string>
  <string name="am_alarm_2000">20:00 | Drink second portion</string>
  <string name="am_alarm_2130">21:30 Turbo Cleanse</string>
  <string name="am_alarm_2145">21:45 Prepare juice</string>
  <string name="am_alarm_2200">22:00 | Drink magic juice</string>
  <string name="am_alarm_0600">06:00 | Drink third portion</string>
  <string name="am_alarm_0800">08:00 | Drink forth portion</string>
  <string name="am_alarm_1000">10:00 Drink fruit juice</string>
  <string name="am_alarm_extra">Additional Notifications</string>

  <string name="am_text_1700">It is time to prepare magnesium</string>

  <string name="htmlAMCleansingText">
    <![CDATA[
        <b>The main phase: The liver cleansing and excretion</b>
        4 tablespoons of Epsom salts dissolved in 720 ml of water, to drink in four portions (180 ml per glass). One of the main tasks of Epsom salts is to make the bile ducts wider, allowing the stones to glide through easily. Moreover, it cleans waste products that can hinder the excretion of stones.
        Drink the first two portions between 6-8 P.M.
        <ul>
            <li>9:30 P.M. No bowel movement? Perform an enema</li>
            <li>9.45 P.M. Press one grapefruit or alternatively 1 orange and 1 lemon; the juice is placed in a sealable vessel or glass. Add 120 ml of olive oil. Shake this until the solution is watery.</li>
            <li>10 P.M. Stand next to your bed (do not sit down!) and drink the solution quickly, ideally at a time, and in no more than 5 minutes. Lie down with elevated upper body (use 1 or 2 pillows), or alternatively, pull to the right side and the knees towards your head. Stay in this position for at least 20 minutes absolutely calm and steer attention to your liver. Go to sleep.</li>
            <li>6 A.M. The next day (Day 7), drink the third portion of the dissolved Epsom salts. Gymnastics or yoga is recommended. If you are tired, return to bed.</li>
            <li>8 A.M. Last portion of the dissolved Epsom salts.</li>
            <li>10 A.M. Drink freshly squeezed fruit juice. Half an hour later you can eat one or two pieces of fresh fruit. An hour later you can eat a light meal.</li>
        </ul>
    ]]>
  </string>
  <string name="htmlAMCleansingText_1">
    <![CDATA[
        <b>Bla-bla-bla-bla bla-bla. Bla-bla-bla bla-bla
        <ul>
            <li>One</li>
            <li>Two</li>
            <li>Three</li>
            <li>Four</li>
            <li>Five</li>
            <li>Sex</li>
        </ul>
    ]]>
  </string>
  <string name="htmlAMCleansingText_2">
    <![CDATA[
Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    ]]>
  </string>
  <string name="date_button">Date Button</string>
  <string name="title_activity_fullscreen">FullscreenActivity</string>
  <string name="dummy_button">Dummy Button</string>
  <string name="dummy_content">DUMMY\nCONTENT</string>

  <string name="hint_000">Swipe up  and down to see more hints</string>
  <string name="hint_001">My first Android app</string>
  <string name="hint_002">Turbo cleanse</string>
  <string name="hint_003">Do not cheat</string>
  <string name="hint_004">The early bird catches the worm</string>
  <string name="hint_005">Don’t bite off more than you can chew</string>
  <string name="hint_006">Curiosity killed the cat.</string>
  <string name="hint_007">You scratch my back, I’ll scratch yours.</string>
  <string name="hint_008">The pen is mightier than the sword.</string>
  <string name="hint_009">A little knowledge is a dangerous thing.</string>
  <string name="hint_010">One drop of poison infects the whole tun of wine.</string>
  <string name="hint_011">You cannot teach old dogs new tricks.</string>
  <string name="hint_012">Where there\'s muck there\'s brass.</string>
  <string name="am_content_caption">Content</string>
  <string name="am_content_1">Theme 1</string>
  <string name="am_content_2">Theme 2</string>
  <string name="am_content_3">Theme 3</string>


</resources>
