<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="10dp"
        tools:context=".AMAlarmFragment">

        <Button
            android:id="@+id/button_theme_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
            android:drawableRight="@drawable/ic_baseline_chevron_right_24"
            android:gravity="left|center_vertical"
            android:padding="15dp"
            android:text="@string/am_content_1"
            />

        <Button
            android:id="@+id/button_theme_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
            android:drawableRight="@drawable/ic_baseline_chevron_right_24"
            android:gravity="left|center_vertical"
            android:padding="15dp"
            android:text="@string/am_content_2" />

        <Button
            android:id="@+id/button_theme_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
            android:drawableRight="@drawable/ic_baseline_chevron_right_24"
            android:gravity="left|center_vertical"
            android:padding="15dp"
            android:text="@string/am_content_3" />
    </LinearLayout>
</ScrollView>